--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
   </header>
 
   <section class="gallery-grid">
-    <img src="images/cafe1.jpg" alt="cafe1">
+    <img src="cafe1.jpg" alt="cafe1.jpg">
     <img src="images/cafe2.jpg" alt="cafe2">
     <img src="images/cafe3.jpg"  alt="cafe3">
     <img src="images/cafe4.jpg" alt="cafe4">
@@ -33,3 +33,4 @@
    <script src="script.js"></script>
 </body>
 </html>
+
