--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-        <img src="images/logo.jpg" alt="logo">
+        <img src="logo.jpg" alt="logo.jpg">
         <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="gallery.html" class="active">Gallery</a></li>
@@ -22,9 +22,9 @@
 
   <section class="gallery-grid">
     <img src="cafe1.jpg" alt="cafe1.jpg">
-    <img src="images/cafe2.jpg" alt="cafe2">
-    <img src="images/cafe3.jpg"  alt="cafe3">
-    <img src="images/cafe4.jpg" alt="cafe4">
+    <img src="cafe2.jpg" alt="cafe2.jpg">
+    <img src="cafe3.jpg"  alt="cafe3.jpg">
+    <img src="cafe4.jpg" alt="cafe4.jpg">
   </section>
 
   <footer>
@@ -33,4 +33,5 @@
    <script src="script.js"></script>
 </body>
 </html>
+
 
