--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-        <img src="images/logo.jpg" alt="logo">
+        <img src="logo.jpg" alt="logo.jpg">
         <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -23,7 +23,7 @@
   <section class="hero">
     <h1>Welcome to Teddy's Treat .</h1>
     <p>More ESPRESSO, Less DEPRESSO.</p>
-    <img src="images/cafe1.jpg" alt="cafe1">
+    <img src="cafe1.jpg" alt="cafe1.jpg">
   </section>
 
   <footer>
@@ -32,3 +32,4 @@
    <script src="script.js"></script>
 </body>
 </html>
+
