--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-        <img src="images/logo.jpg" alt="logo">
+        <img src="logo.jpg" alt="logo.jpg">
         <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -27,11 +27,12 @@
     <p>We're a small family of passionate baristas, chefs, and foodies. We'll always greet you with a smile!</p>
     <p>Founded with love and breed with passion.</p>
     <p>Our mission is to serve happiness in every cup and bite.</p>
-    <img src="images/cafe2.jpg" alt="cafe2">
+    <img src="cafe2.jpg" alt="cafe2.jpg">
   </section>
     <footer>
     <p>&copy; 2025 Teddy's Treat. All rights reserved.</p>
    </footer>
    <script src="script.js"></script>
 </body>
+
 </html>
