--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-        <img src="images/logo.jpg" alt="logo">
+        <img src="logo.jpg" alt="logo.jpg">
         <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -22,84 +22,84 @@
 
   <section class="menu-grid">
     <div class="espresso">
-    <img src="images/espresso.jpg" alt="espresso">
+    <img src="espresso.jpg" alt="espresso.jpg">
     <h2>Espresso</h2>
     <p>"Rich and bold espresso shots."</p>
     <p class="price">$7.99</p>
     <button class="add-to-cart-button" data-product-id="espresso">Add to cart</button>
     </div>
     <div class="latte">
-    <img src="images/latte.jpg" alt="latte">
+    <img src="latte.jpg" alt="latte.jpg">
     <h2>Latte</h2>
     <p>"Smooth and creamy latte with lots of love."</p>
     <p class="price">$7.99</p>
     <button class="add-to-cart-button" data-product-id="latte">Add to cart</button>
     </div>
         <div class="lemon tea">
-    <img src="images/lemontea.jpg" alt="lemon tea">
+    <img src="lemontea.jpg" alt="lemontea.jpg">
     <h2>Lemon Tea</h2>
     <p>"Refreshing tea made from freshly picked lemons."</p>
     <p class="price">$5.99</p>
         <button class="add-to-cart-button" data-product-id="lemon tea">Add to cart</button>
     </div>
     <div class="matcha">
-    <img src="images/matcha.jpg" alt="matcha">
+    <img src="matcha.jpg" alt="matcha.jpg">
     <h2>Matcha</h2>
     <p>"Sweet, earthy, dreamy- that's matcha magixx."</p>
     <p class="price">$11.99</p>
         <button class="add-to-cart-button" data-product-id="matcha">Add to cart</button>
     </div>
     <div class="mango tea">
-    <img src="images/mangotea.jpg" alt="mango tea">
+    <img src="mangotea.jpg" alt="mangotea.jpg">
     <h2>Mango Tea</h2>
     <p>"Chill out with our mango magic."</p>
     <p class="price">$4.99</p>
         <button class="add-to-cart-button" data-product-id="mango tea">Add to cart</button>
     </div>
     <div class="hot chocolate">
-    <img src="images/hotchocolate.jpg" alt="hot chocolate">
+    <img src="hotchocolate.jpg" alt="hotchocolate.jpg">
     <h2>Hot Chocolate</h2>
     <p>"Chocolate: Because adulting is hard."</p>
     <p class="price">$6.99</p>
         <button class="add-to-cart-button" data-product-id="hot chocolate">Add to cart</button>
     </div>
     <div class="brownies">
-    <img src="images/brownies.jpg" alt="brownies">
+    <img src="brownies.jpg" alt="brownies.jpg">
     <h2>Brownies</h2>
     <p>"Bite into the bliss with our class chocolate brownies."</p>
     <p class="price">$4.99</p>
         <button class="add-to-cart-button" data-product-id="brownies">Add to cart</button>
     </div>
     <div class="cheesecake">
-    <img src="images/cheesecake.jpg" alt="cheesecake">
+    <img src="cheesecake.jpg" alt="cheesecake.jpg">
     <h2>Cheesecake</h2>
     <p>"Smooth, creamy and sinfully satisfying."</p>
     <p class="price">$12.99</p>
         <button class="add-to-cart-button" data-product-id="cheesecake">Add to cart</button>
     </div>
     <div class="croissants">
-    <img src="images/croissants.jpg" alt="croissants">
+    <img src="croissants.jpg" alt="croissants.jpg">
     <h2>Croissants</h2>
     <p>"Buttery layers that melts your worries away."</p>
     <p class="price">$5.99</p>    
     <button class="add-to-cart-button" data-product-id="croissants">Add to cart</button>
     </div>
     <div class="donuts">
-    <img src="images/donuts.jpg" alt="donuts">
+    <img src="donuts.jpg" alt="donuts.jpg">
     <h2>Donuts</h2>
     <p>"The perfect pick-me-up in every bite."</p>
     <p class="price">$9.99</p>
         <button class="add-to-cart-button" data-product-id="donuts">Add to cart</button>
     </div>
     <div class="sandwiches">
-    <img src="images/sandwiches.jpg" alt="sandwiches">
+    <img src="sandwiches.jpg" alt="sandwiches.jpg">
     <h2>Sandwiches</h2>
     <p>"Sliced, stacked, and totally snack-worthy."</p>
     <p class="price">$4.99</p>
         <button class="add-to-cart-button" data-product-id="sandwiches">Add to cart</button>
     </div>
         <div class="french fries">
-    <img src="images/frenchfries.jpg" alt="french fries">
+    <img src="frenchfries.jpg" alt="frenchfries.jpg">
     <h2>French fries</h2>
     <p>"FRIES- The real MVP of every meal."</p>
     <p class="price">$6.99</p>
@@ -112,3 +112,4 @@
    <script src="script.js"></script>
 </body>
 </html>
+
