--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-        <img src="images/logo.jpg" alt="logo">
+        <img src="logo.jpg" alt="logo.jpg">
         <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -40,3 +40,4 @@
    <script src="script.js"></script>
 </body>
 </html>
+
